<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:layout_width="match_parent"
        android:hint="@string/link_content"
        android:gravity="center"
        android:id="@+id/et_link_content"
        android:background="@drawable/input_shape"
        android:layout_height="@dimen/dialog_input_eidtview_height" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/input_dialog_color"/>
    <EditText
        android:hint="@string/link_address"
        android:layout_width="match_parent"
        android:gravity="center"
        android:id="@+id/et_link_address"
        android:background="@drawable/input_shape"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:layout_height="@dimen/dialog_input_eidtview_height" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/input_dialog_color"/>
    <TextView
        android:layout_width="match_parent"
        android:text="@string/save_note"
        android:gravity="center"
        android:id="@+id/tv_save_link"
        android:background="@drawable/input_shape"
        android:layout_height="@dimen/dialog_input_eidtview_height" />

</LinearLayout>